/*
 *   Copyright 2016 Manik Surtani
 *
 *   Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 */

syntax = "proto3";

package quotaservice.configs;

// Representations of configuration elements, for persisting and sharing across nodes.
message ServiceConfig {
  BucketConfig global_default_bucket = 1;
  map<string, NamespaceConfig> namespaces = 2;
  // Metadata for the configuration
  int32 version = 3;
  string user = 4;
  int64 date = 5;
}

message NamespaceConfig {
  string name = 1;
  BucketConfig default_bucket = 2;
  BucketConfig dynamic_bucket_template = 3;
  int32 max_dynamic_buckets = 4;
  map<string, BucketConfig> buckets = 5;
}

message BucketConfig {
  string name = 1;
  string namespace = 2;
  int64 size = 3;
  int64 fill_rate = 4;
  int64 wait_timeout_millis = 5;
  int64 max_idle_millis = 6;
  int64 max_debt_millis = 7;
  int64 max_tokens_per_request = 8;
}
